--- a/views/main.ejs
+++ b/views/main.ejs
@@ -18,11 +18,11 @@
 	</nav>
 	<div class="container-fluid text-center intro-container mt-6">
 		<div class="container jumbotron">
-			<div class="overlap">
-<!-- 				<img src="./images/img1.jpg">
+<!-- 			<div class="overlap visible-md visible-lg">
+				<img src="./images/img1.jpg">
 				<img src="./images/img2.jpg">
-				<img src="./images/img3.jpg"> -->
-			</div>
+				<img src="./images/img3.jpg">
+			</div> -->
 			<div class="intro">
 				<h3>Find food fast, with <span class="cinch-span">Cinch!</span></h3>
 				<button type="button" class="btn btn-default btn-lg cta-button loc-btn">Start now!</button>
